@@ -1,0 +1,31 @@
+"""
+Utility functions for rtf-ng.
+"""
+import os
+
+def importModule(name):
+    mod = __import__(name)
+    components = name.split('.')
+    for comp in components[1:]:
+        mod = getattr(mod, comp)
+    return mod
+
+def fileIsTest(path, skipFiles=[]):
+    if not os.path.isfile(path):
+        return False
+    filename = os.path.basename(path)
+    if filename in skipFiles:
+        return False
+    if filename.startswith('test') and filename.endswith('.py'):
+        return True
+
+def find(start, func, skip=[]):
+    for item in [os.path.join(start, x) for x in os.listdir(start)]:
+        if func(item, skip):
+            yield item
+        if os.path.isdir(item):
+            for subItem in find(item, func, skip):
+                yield subItem
+
+def findTests(startDir, skipFiles=[]):
+    return find(startDir, fileIsTest, skipFiles)
